# Petl

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
docker/: FastApiDockerfile
docs/: README.md  grammar.md  grammars.md
k8s/: fastapi-deployment.yaml  fastapi-service.yaml  ollama-deployment.yaml  ollama-service.yaml  petl-ingress.yaml  redis-deployment.yaml
programs/: 100_line_csv_test.csv  alias.petl  bigger_csv.petl  bird_operator.petl  builtin_test_println.petl  comment_after_line.petl  comment_single_line.petl  contains.petl  count.petl  createTable.petl  data_stream_example.petl  for_loop_over_list_def_single_reference.petl  for_loop_over_range_single_reference.petl  for_loop_over_tuple_def_single_reference.petl  front_back_head_tail.petl  insert.petl  intToString.petl  iterate_dict.petl  lambda_closure.petl  len.petl  map.petl  match_range.petl  min_max.petl  multiple_integer_literal_lets.petl  nested_lambda_closure.petl  nested_list_application.petl  nested_list_application_type_mismatch.petl  nested_tuple_application.petl  nested_tuple_application_type_mismatch.petl  rand.petl  readCsv.petl  readln.petl  remove.petl  replace.petl  reverse.petl  set.petl  single_lambda_def_no_args_single_ref.petl  single_lambda_def_single_arg_single_ref.petl  single_lambda_def_single_arg_single_ref_type_mismatch.petl  single_let_list_of_integer_literals.petl  (+11 more)
resources/: grammar.txt  petl.txt  stack_vm.petl
src/: delimiter.py  file_position.py  lexer.py  main.py  petl_keyword.py  petl_phase.py  petl_token.py  raw_delimiter.py
(+319 files in other folders)
